@startuml
!define primary_key(x) <u>x</u>
hide methods
hide stereotypes
hide circle
hide empty members

entity books {
  *primary_key(id) uint
  --
  *title string
  *created_at datetime
  *updated_at datetime
  deleted_at datetime
  publisher string
  published datetime
  language string
  cover string
  book_path string
  original_book_name string
  original_book_path string
  collection_id uint
}

entity collections {
  *primary_key(id) uint
  --
  *created_at datetime
  *updated_at datetime
  *title string
  cover string
  deleted_at datetime
}

entity authors {
  *primary_key(id) uint
  --
  *created_at datetime
  *updated_at datetime
  *name string
  deleted_at datetime
}

entity author2_books {
  *author_id uint
  *book_id uint
}

entity subject2_books {
  *subject_id uint
  *book_id uint
}

entity subjects {
  *primary_key(id) uint
  --
  *created_at datetime
  *updated_at datetime
  *name string
  deleted_at datetime
}

books::collection_id |o--|| collections::id
author2_books::author_id ||--|| authors::id
author2_books::book_id ||--|| books::id
subject2_books::subject_id ||--|| subjects::id
subject2_books::book_id ||--|| books::id
@enduml
